// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing: theme-base breakpoints should match primary button layout correctly 1`] = `
.c0 {
  border-radius: 2rem;
  color: #FFFFFF;
  text-transform: uppercase;
  cursor: pointer;
  padding: 0.625rem 1.5rem;
  font-family: Nunito Sans,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  background-color: #3399FF;
}

.c0:hover {
  background-color: #2866A8;
}

@media (min-width:768px) {
  .c0 {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}

<button
  className="c0"
/>
`;

exports[`testing: theme-base breakpoints should match secondary button layout correctly 1`] = `
.c0 {
  border-radius: 2rem;
  color: #FFFFFF;
  text-transform: uppercase;
  cursor: pointer;
  padding: 0.625rem 1.5rem;
  font-family: Nunito Sans,sans-serif;
  font-size: 1rem;
  line-height: 1.5rem;
  background-color: #6C757D;
}

.c0:hover {
  background-color: #5A6268;
}

@media (min-width:768px) {
  .c0 {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}

<button
  className="c0"
/>
`;

exports[`testing: theme-base breakpoints should match small button size correctly 1`] = `
.c0 {
  border-radius: 2rem;
  color: #FFFFFF;
  text-transform: uppercase;
  cursor: pointer;
  padding: 0.375rem 1rem;
  font-family: Nunito Sans,sans-serif;
  font-size: .8125rem;
  line-height: 1rem;
  background-color: #3399FF;
}

.c0:hover {
  background-color: #2866A8;
}

@media (min-width:768px) {
  .c0 {
    font-size: .8125rem;
    line-height: 1rem;
  }
}

<button
  className="c0"
/>
`;
